# ratings_server_grpc

./: CMakeLists.txt  LICENSE  README.md  build.sh  client.sh
services/: ratings.proto
src/: main.cpp
src/client/: ratings_client.py  ratings_pb2.py  ratings_pb2_grpc.py
src/ratings/: ratings_server.cpp  ratings_server.h
